Tidied up the webpage title.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/qfa@61 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/index.html
+++ b/www/index.html
@@ -7,8 +7,8 @@
 <link rel="STYLESHEET" href="CLstyle.css" type="text/css"> 
 </head> 
  
-<h2><a href="http://r-forge.r-project.org/projects/qfa/">qfa: the R toolbox for carrying out Quantitative Fitness Analysis</a></h2> 
-
+<h1>qfa: the R toolbox for carrying out Quantitative Fitness Analysis</h1> 
+<hr></hr>
 <h3>Download R package</h3>
 
 <p>The R package can be downloaded for several operating systems at its R-forge page:
@@ -16,6 +16,8 @@
 <a href="http://r-forge.r-project.org/projects/qfa">http://r-forge.r-project.org/projects/qfa</a>
 </br></br>
 Source code for the package can also be checked out by SVN.
+<hr></hr>
+
 <h3>Introduction</h3>
 
 <p> In the QFA method, we generate cell density timecourse estimates by repeatedly photographing micro-organism cultures growing in regular arrays on solid agar plates.  First, we quantify cell density from timecourse photographs using the image analysis tool <a href="http://research.ncl.ac.uk/colonyzer">Colonyzer</a> (<a href="http://dx.doi.org/10.1186/1471-2105-11-287">Lawless et al., 2010</a>).  Next, we fit a logistic model to the cell density timecourse for each independently growing culture, using the inferred logistic model parameters to define a quantitative measure of culture fitness.  Comparisons between fitnesses can be extremely useful for deducing various aspects of the function of cultures.  Some examples follow:</p>
