Added images to website
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/qfa@181 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/index.html
+++ b/www/index.html
@@ -36,6 +36,10 @@ Source code for the package can also be checked out from R-forge by SVN.
  
 If the arrayed cultures are grown at selected temperatures we can infer the extent of temperature sensitivity of mutants. <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> demonstrated the use of QFA to identify gene deletions resulting in increased temperature sensitivity.  These results were verified by comparison with high-quality, low-throughput observations listed in the SGD database.  If cultures are subject to treatments (e.g. nutrition, or drug treatments) we can generate quantitative, ranked lists of cultures which grow surprisingly well or badly given the treatment.</p>
 
+<a href="SpottedCultures.png"><img src="SpottedCultures.png" height=300 title="Photograph of 384 cultures spotted onto solid agar."></a>
+<a href="GrowthCurves.png"><img src="GrowthCurves.png" height=300 title="Growth curves for cultures inoculated on solid agar in 384 format"></a>
+<a href="Interaction.png"><img src="Interaction.png" height=300 title="Genome-wide screen for genes interacting with CDC13."></a>
+
 <h3>Workflow</h3>
 
 <p> To put this R toolbox into context, it is for carrying out the mathematical and statistical aspects of the QFA workflow.  This analysis stage is preceded by two others.</p>  
