--- a/www/index.html
+++ b/www/index.html
@@ -1,86 +1,142 @@
-
-<html> 
- 
-<head> 
-<title>qfa: the R toolbox for carrying out Quantitative Fitness Analysis</title> 
-<meta http-equiv="Keywords" name=Keywords content="quantitative, fitness, analysis, qfa, Colonyzer, Computational, Screening, Image, Analysis, Yeast, Spots, Senescence, Genome, Robot, Newcastle, Adinall, Lawless, Wilkinson,Lydall"> 
-<link rel="STYLESHEET" href="CLstyle.css" type="text/css"> 
+<!doctype html>
+<html lang=en> 
+<head>
+<meta charset=utf-8> 
+<title>qfa: the R toolbox for Quantitative Fitness Analysis of microbial cultures</title> 
+<meta name="desciption" content="Installing and using an R package for Quantitive Fitness Analysis (QFA) of arrayed microbial cultures growing on solid agar.">
+<link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="CLstyle.css">
 </head> 
  
+<header>
 <h1>qfa: the R toolbox for Quantitative Fitness Analysis</h1> 
 <hr></hr>
-<h3>Installing the package</h3>
+</header>
 
-<p>The <a href="http://cran.r-project.org/">R</a> package is available for several operating systems at its R-forge page:
-</br></br>
+<nav id="nav">
+<h4>Contents</h4>
+<ul>
+	<li><a href="#install">Installing package</a></li>
+	<li><a href="#qfa">QFA</a>
+		<ul>
+			<li><a href="#applications">Applications</a></li>
+			<li><a href="#workflow">Workflow</a></li>
+			<li><a href="#jove">JoVE video</a></li>
+		</ul></li>
+	<li><a href="#functions">Functions overview</a>
+		<ul>
+			<li><a href="#reading">Reading data</a></li>
+			<li><a href="#inferring">Fitting growth model</a></li>
+			<li><a href="#interaction">Inferring interactions</a></li>
+			<li><a href="#auxiliary">Auxiliary functions</a></li>
+		</ul></li>
+</ul>
+
+<br></br>
+<h4>Other software</h4>
+<ul>
+	<li><a href="http://research.ncl.ac.uk/colonyzer">Colonyzer</a></li>
+</ul>
+
+<br></br>
+<h4>References</h4>
+<ul>
+<li><a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a></li>
+<li><a href="http://dx.doi.org/10.3791/4018">Banks et al., 2012</a></li>
+<li><a href="http://dx.doi.org/10.1186/1471-2105-11-287">Lawless et al., 2010</a></li>
+</ul>
+
+<br></br>
+<h4>Authors</h4>
+<ul>
+<li><a href="http://www.staff.ncl.ac.uk/conor.lawless/">Conor Lawless</a></li>
+<li>Jonathan Heydari</li>
+<li>Alexander Young</li>
+<li><a href="http://www.staff.ncl.ac.uk/d.j.wilkinson/">Darren Wilkinson</a></li>
+</ul>
+
+</nav>
+
+
+<article>
+<a name="install"><h2>Installing the package</h2></a>
+
+<p>The <a href="http://cran.r-project.org/">R</a> package is available for several operating systems from R-forge:</p>
+
 <a href="http://r-forge.r-project.org/projects/qfa">http://r-forge.r-project.org/projects/qfa</a>
-</br></br>
-The easiest installation method is to execute the following command during an <a href="http://cran.r-project.org/">R</a> session:
-</br></br>
-<code>
-install.packages("qfa", repos="http://R-Forge.R-project.org")
-</code>
-</br></br>
-Note that the latest version of <a href="http://cran.r-project.org/">R</a> is required for easy, automatic installation. Source code can be used to build the package for older versions of <a href="http://cran.r-project.org/">R</a> if required and can be checked out from <a href="http://r-forge.r-project.org/projects/qfa">R-forge</a> by SVN.
+
+<p>The easiest way to install the package is to execute the following command during an <a href="http://cran.r-project.org/">R</a> session:</p>
+<code class="indent">install.packages("qfa", repos="http://R-Forge.R-project.org")</code>
+<p>Note that the latest version of <a href="http://cran.r-project.org/">R</a> is required for easy, automatic installation. Source code can be used to build the package for older versions of <a href="http://cran.r-project.org/">R</a> if required and can be checked out from <a href="http://r-forge.r-project.org/projects/qfa">R-forge</a> by SVN.</p>
+
+<p>Once installed, the package can be loaded ready for use with:</p>
+<code class="indent">library(qfa)</code>
+<p>Detailed documentation can be accessed <a href="docs/qfa-manual.pdf">here</a> or by executing:</p>
+<code class="indent">help(package="qfa")</code>
+<p>Documentation for specific functions can also be obtained using the usual R mechanisms.  For example, help on the function <code>colonyzer.read</code> can be obtained with:</p>
+<code class="indent">?colonyzer.read</code></a>
+<p>A short document outlining QFA and the R package functions can be accessed <a href="docs/qfa.pdf">here</a> by:</p>
+<code class="indent">vignette("qfa")</code>
+<p>Finally, some code demonstrating analysis of a small subset of the data presented in <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> can be executed by:</p>
+<code class="indent">demo("telomereCap")</code>
+<br></br>
+
 <hr></hr>
 
-<h3>Introduction</h3>
+<a name="qfa"><h2>Quantitative Fitness Analysis</h2></a>
 
 <p> During Quantitative Fitness Analysis (QFA) we generate cell density timecourse estimates by repeatedly photographing microbial cultures growing in regular arrays on solid agar plates.  First, we quantify cell density from timecourse photographs using the image analysis tool <a href="http://research.ncl.ac.uk/colonyzer">Colonyzer</a> (<a href="http://dx.doi.org/10.1186/1471-2105-11-287">Lawless et al., 2010</a>).  Next, we fit a logistic model to the cell density timecourse for each independently growing culture, using the inferred logistic model parameters to define a quantitative measure of culture fitness.  Comparisons between fitnesses can be extremely useful for deducing various aspects of the function of cultures.  This R package is for fitting logistic models to cell density timeseries, generating fitness estimates, quantifying (e.g. genetic) interactions, data quality control and data visualisation.</p>
 
-<h3>Example Applications</h3>
+<a name="applications"><h3>Example Applications</h3></a>
 
 <p>By carrying out QFA on arrayed microbial cultures containing relevant gene mutations, we can use fitness estimates to infer the presence or absence of epistasis, and to quantify and rank genetic interaction strengths.  For example, during screens for deletions interacting with telomere capping mutations, <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> inferred genetic interaction strength as the deviation of observed double mutant fitnesses from predicted double mutant fitnesses given observed single deletion fitnesses and assuming a multiplicative model of epistasis.  They also calculate the statistical significance of deviations given noise in experimental observations.</p>
  
 <p>If arrayed cultures are grown at selected temperatures we can infer the temperature sensitivity of mutants by QFA. <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> demonstrated the use of QFA to identify gene deletions resulting in increased temperature sensitivity.  These results were verified by comparison with manually curated observations listed in the SGD database.  If cultures are subject to treatments (e.g. nutrition, or drug treatments) QFA can generate ranked lists of cultures which grow surprisingly well or badly given the treatment.</p>
 
-<div STYLE="position:relative; float:left; HEIGHT:575px">
-<div STYLE="position:absolute; TOP:0px; LEFT:50px; WIDTH:500px">
-	<a href="http://www.flickr.com/photos/conchur/5658435523/" title="15 independent spotted yeast cultures"><img src="http://farm6.staticflickr.com/5310/5658435523_c2e43729f1.jpg" width="450" alt="FiveByThree" style="float:left"></a>
-	<a href="GrowthCurves.svg"><img src="GrowthCurves.svg" type="image/svg+xml" width="450" title="Timeseries photographs and growth curves for two spotted cultures." style="float:left"></a>
+<div STYLE="position:relative; float:left; HEIGHT:520px">
+<div STYLE="position:absolute; TOP:0px; LEFT:0px; WIDTH:500px">
+	<a href="http://www.flickr.com/photos/conchur/5658435523/" title="15 independent spotted yeast cultures arranged in a rectangular array"><img src="http://farm6.staticflickr.com/5310/5658435523_c2e43729f1.jpg" width="400" alt="FiveByThree" style="float:left"></a>
+	<a href="GrowthCurves.svg"><img src="GrowthCurves.svg" type="image/svg+xml" width="400" title="Timeseries photographs and growth curves for two example spotted cultures." style="float:left"></a>
 </div>
 </br>
-<div STYLE="position:absolute; TOP:0px; LEFT:575px; WIDTH:500px">
-	<a href="Interaction.png"><img src="Interaction.png" height="580" title="Genome-wide screen for genes interacting with CDC13" style="float:left"></a>
+<div STYLE="position:absolute; TOP:0px; LEFT:425px; WIDTH:500px">
+	<a href="FitnessPlot.png"><img src="FitnessPlot.png" height="550" title="A genome-wide screen for genes interacting with CDC13" style="float:left"></a>
 </div>
 </div>
 <br style="clear:both;" />
 
-<h3>Workflow</h3>
+<a name="workflow"><h3>Workflow</h3></a>
 
-<p> This R package is a toolbox for carrying out the computational (i.e. mathematical & statistical) aspects of the QFA workflow.  Computational analysis is preceded by two experimental stages.</p>  
+<p> This R package is a toolbox for carrying many of the the computational (i.e. mathematical & statistical) aspects of the QFA workflow.  Computational analysis is preceded by two experimental stages.</p>  
 <p>The first stage of QFA requires the generation of arrays of cultures of interest.  This can be carried out in a high-throughput fashion, using libraries of gene mutations (as was done in <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a>), however it can also be carried out in a lower-throughput fashion, with hand selected and hand inoculated cultures, growing on a single plate for example.  Once cultures are generated and inoculated onto agar, they must be repeatedly photographed.  There are custom, semi-automatic and fully-automatic technologies available to facilitate timecourse photography of such plates (e.g. S&P Robotics SPImager, BM3), however any lab should be able to capture such timecourses by fixing a consumer digital camera over a plate, and repeatedly capturing images to a computer hard-drive via USB cable.  It is important to capture the time at which the photographs were taken, and this is achieved most simply by embedding the current date and time into the captured image filenames.</p>  
 
 <p>The second stage is the conversion of culture photographs into estimates of cell density.  This is usually achieved using the the image analysis tool <a href="http://research.ncl.ac.uk/colonyzer">Colonyzer</a> (<a href="http://dx.doi.org/10.1186/1471-2105-11-287">Lawless et al., 2010</a>.  However the output of any image analysis tool capable of generating culture size estimates for images of rectangular arrayed cultures could be reformatted and used in the QFA workflow.  <a href="http://research.ncl.ac.uk/colonyzer">Colonyzer</a> is a suite of particularly senstive image analysis algorithms, capable of detecting signal on spotted agar plates early in the growth curve.  It has been designed to eliminate lighting gradients in captured images, thereby allowing the capture of density estimates having no spatial bias without having to use expensive, carefully optimised lighting systems. </p>
  
 <p>Given cell density estimates from <a href="http://research.ncl.ac.uk/colonyzer">Colonyzer</a> and an appropriate experimental description (e.g. describing the location of each culture, the treatments applied, and the time of inoculation for each plate), the qfa R package contains everything needed to generate quantitiative fitness estimates for all cultures, together with estimates of genetic interaction strengths (for appropriately designed experiments).</p>  
 
-<hr></hr> 
-<h2>Journal of Visualised Experiments QFA video</h2> 
-<p>Below is a short video describing the experimental and computational components of QFA</p>
-<p>
+<a name="jove"><h3>Journal of Visualised Experiments QFA video</h3></a>
+<p>A short video describing the experimental and computational components of QFA.  There is also an open-access <a href="http://www.jove.com/pdf/4018">manuscript</a> describing the QFA protocol associated with this video.
 <iframe height="515" border="0" scrolling="no" frameborder="0" marginwheight="0" marginwidth="0" src="http://www.jove.com/embed/player?id=4018&amp;t=1&amp;a=1&amp;chap=1&amp;s=1" width="815"><p><a title="A Quantitative Fitness Analysis Workflow" href="http://www.jove.com/video/4018/a-quantitative-fitness-analysis-workflow">A Quantitative Fitness Analysis Workflow</a></p></iframe>
 </p>
 
 <hr></hr> 
 
-<h2>R package</h2> 
+<a name="functions"><h2>R package functions overview</h2></a> 
  
-<h3>General overview</h3> 
-
 <p>This R package consists of a set of functions, split into types below:</p>
 
-<h4>Reading and formatting data</h4>
+<a name="reading"><h4>Reading and formatting data</h4></a>
 <p>These functions read in image analysis output (e.g. from <a href="http://research.ncl.ac.uk/colonyzer">Colonyzer</a>), associate these cell density estimates with culture type (e.g. genotype) & plate treatments and calculate time since inoculation for each observation.  All of these data are bound together into a data.frame object, with rows representing unique observations of individual cultures.</p>
 
-<h4>Fitting logistic model to growth curves</h4>
+<a name="fitting"><h4>Fitting logistic model to growth curves</h4></a>
 <p>These functions carry out parameter inference for a <a href="http://en.wikipedia.org/wiki/Generalised_logistic_function#Generalised_logistic_differential_equation">generalised logistic model</a> of the observed growth curves.  Inference is currently carried out by maximum likelihood (fast, only provides point estimates for parameter values), however we are currently developing a parallel package (qfaBayes) for Bayesian hierarchical inference which will provide distributed parameter estimates, making more efficient use of the available experimental observations.  Logistic model parameter values can be used to construct quantitative fitness definitions for subsequent analysis.</p>
 
-<h4>Inferring genetic interaction strengths</h4>
+<a name="interaction"><h4>Inferring genetic interaction strengths</h4></a>
 <p><a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> present statistical methods for inferring genetic interaction with telomere capping mutations.  The analysis was based on comparing observervations of double mutant fitnesses with predicted double mutant fitnesses given observed single deletion fitnesses and assuming a multiplicative model of genetic interaction.  Effectively, genome-wide observations are used to construct a linear predictor of query mutation fitness given control mutation fitness, and  any deviations from this prediction are evidence for genetic interaction.  Observations of multiple replicate cultures are typically made and these replicates can be summarised by mean or median fitness, and significance of deviations can correspondingly be estimated by Student's t-test or the Mann-Whitney test, corrected for multiple comparisons.  Analysis based on mean/t-test is generally prefrable to that using median/Mann-Whitney test, since the former has greater statistical power, however, in the case where it has not been possible to perform adequate quality control on the source data (e.g. there are occasional contaminants, or missing cultures, resulting in statistical outliers) the former may be preferable. 
 
-<h4>Auxiliary functions</h4>
+<a name="auxiliary"><h4>Auxiliary functions</h4></a>
 <p>Together with the functions for carrying out the raw analysis above, we provide several functions for visualising the data, the fit of the logistic model to the data and the visualisation of evidence for epistatic interaction.  These visualisation tools are important for understanding unexpected fitness patterns, tracking bugs and increasing user confidence in the validity of the sophisticated QFA workflows.</p>
+</article>
 
 </body> 
 </html> 
